src/middleware/snapshots/axum_tracing_opentelemetry__middleware__trace_extractor__tests__trace_id_in_child_span_for_remote_otel_spans.snap
---
source: src/middleware/trace_extractor.rs
expression: otel_spans
---
- trace_id: "[trace_id:lg32]"
  span_id: "[span_id:lg16]"
  trace_state: ""
  parent_span_id: "[span_id:lg16]"
  name: my child span
  kind: SPAN_KIND_INTERNAL
  start_time_unix_nano: "[timestamp]"
  end_time_unix_nano: "[timestamp]"
  attributes:
    busy_ns: ignore
    code.filepath: ignore
    code.lineno: ignore
    code.namespace: "Some(AnyValue { value: Some(StringValue(\"axum_tracing_opentelemetry::middleware::trace_extractor::tests\")) })"
    idle_ns: ignore
    thread.id: ignore
    thread.name: "Some(AnyValue { value: Some(StringValue(\"middleware::trace_extractor::tests::check_span_event::case_8\")) })"
  dropped_attributes_count: 0
  events: []
  dropped_events_count: 0
  links: []
  dropped_links_count: 0
  status:
    message: ""
    code: STATUS_CODE_UNSET
- trace_id: "[trace_id:lg32]"
  span_id: "[span_id:lg16]"
  trace_state: ""
  parent_span_id: "[span_id:lg16]"
  name: GET /with_child_span
  kind: SPAN_KIND_SERVER
  start_time_unix_nano: "[timestamp]"
  end_time_unix_nano: "[timestamp]"
  attributes:
    busy_ns: ignore
    code.filepath: ignore
    code.lineno: ignore
    code.namespace: "Some(AnyValue { value: Some(StringValue(\"axum_tracing_opentelemetry::middleware::trace_extractor\")) })"
    http.client_ip: "Some(AnyValue { value: Some(StringValue(\"\")) })"
    http.flavor: "Some(AnyValue { value: Some(StringValue(\"1.1\")) })"
    http.host: "Some(AnyValue { value: Some(StringValue(\"\")) })"
    http.method: "Some(AnyValue { value: Some(StringValue(\"GET\")) })"
    http.route: "Some(AnyValue { value: Some(StringValue(\"/with_child_span\")) })"
    http.scheme: "Some(AnyValue { value: Some(StringValue(\"HTTP\")) })"
    http.status_code: "Some(AnyValue { value: Some(StringValue(\"200\")) })"
    http.target: "Some(AnyValue { value: Some(StringValue(\"/with_child_span\")) })"
    http.user_agent: "Some(AnyValue { value: Some(StringValue(\"\")) })"
    idle_ns: ignore
    thread.id: ignore
    thread.name: "Some(AnyValue { value: Some(StringValue(\"middleware::trace_extractor::tests::check_span_event::case_8\")) })"
    trace_id: ignore
  dropped_attributes_count: 0
  events: []
  dropped_events_count: 0
  links: []
  dropped_links_count: 0
  status:
    message: ""
    code: STATUS_CODE_OK

